<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Quiz">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/tb"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asw_1_1" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asw_1_2" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <CheckBox android:id="@+id/checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_1" />

    <CheckBox android:id="@+id/checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_2"/>

    <CheckBox android:id="@+id/checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_3"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Subbmit"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:gravity="center"
            android:text="Reset"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>
    </LinearLayout>


</LinearLayout>